src/app/calculation/grammar.txt
Grammar

id = [a-zA-Z_][a-zA-z0-9_]*

number = [0-9]+

func = id "(" comma ")" 

primary = id | number | "(" comma ")" | func

factorial = primary | factorial "!"

pow = factorial | factorial '^' pow

unary = pow| "+" unary | "-" unary

mult = unary | mult "*" unary | mult "/" unary

arith = mult | arith "+" mult | arith "-" mult

assign = arith | arith "=" assign

comma = assign | assign "," comma
